[project]
name = "use-mysql"
version = "0.0.2"
description = "A simple MySQL client for Python"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "miclon", email = "jcnd@163.com" }]
dependencies = [
    "anyio>=3.6",
    "pydantic>=2.12.5",
    "pymysql>=1.1.2",
    "sqlmodel>=0.0.29",
    "tortoise-orm[asyncmy]>=0.25.2",
]

[dependency-groups]
test = [
  "pylint",
  "pytest",
  "black",
  "flake8",
  "isort",
  "pre-commit",
  "pre-commit-hooks",
]

[build-system]
requires = ["hatchling>=1.18.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/use_mysql"]

[[tool.uv.index]]
name = "aliyun"
url = "https://mirrors.aliyun.com/pypi/simple/"
default = true
