[project]
name = "use-mysql"
version = "0.0.4"
description = "A simple MySQL client for Python"
readme = "README.md"
requires-python = ">=3.8"
authors = [{ name = "miclon", email = "jcnd@163.com" }]
dependencies = [
    "pymysql>=1.1.2",
    "sqlmodel>=0.0.29",
]

[dependency-groups]
test = [
  "pylint",
  "pytest",
  "black",
  "flake8",
  "isort",
  "pre-commit",
  "pre-commit-hooks",
]

[build-system]
requires = ["hatchling>=1.18.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/use_mysql"]

[[tool.uv.index]]
name = "aliyun"
url = "https://mirrors.aliyun.com/pypi/simple/"
default = true
